--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-<h1> Joe Black </h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+    <div></div>
+
+    <div class="grid-container">
+
+        <div class="grid-item">
+            <h2> Joe Black </h2>
+
+            <p>Estado civil: Soltero</p>
+            <p>Nacionalidad: Argentino</p>
+            <p>Edad: 36 años</p>
+            <p>Fecha de nacimiento: 12 de febrero de 1986</p>
+            <p>Telefono: (761) 923-3172</p>
+            <p>Direccion: 660 Fincher Rd</p>
+            <p>Email: joe.black@example.com</p>
+
+            <h2>Experiencia</h2>
+            <p>Grupo<br>
+                Diseñador grafico | octubre 2018 - actualidad</p>
+            <p>Kuwi<br>
+                Diseñador grafico | marzo 2018 - octubre 2018</p>
+            <p>Cordoba shop <br>
+                Diseñador grafico | abril 2017 - marzo 2018</p>
+            <p>Pixels <br>
+                Diseñador grafico | diciembre 2015 - abril 2017</p>
+        </div>
+
+        <div class="grid-item">
+            <h2> Educacion </h2>
+            <p>Nivel Terciario: <br>
+            Técnico Superior en Diseño y Comunicación Visual <br> </p>
+            <p>Nivel Terciario: <br>
+            Técnico Superior Universitario en Comercialización <br> </p>
+            <p>Curso de Diseño Web</p>
+            <p>Curso en WordPress y WooCommerce</p>
+            <p>Marketing digital</p>
+            <p>Curso en Diseño Editorial</p>
+            <p>Capacitación en Presupuestos</p>
+            <p>Curso en Diseño 3D</p>
+            <p>Capacitación en Community Manager</p> 
+            
+            <h2>Herramientas / Software</h2>
+            <div class="tools-container">
+                <div class="tool-item">
+                  <p>PS</p>
+                </div>
+                <div class="tool-item">
+                    <p>Ai</p>
+                </div>
+                <div class="tool-item">
+                    <p>Xd</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+    <script src="scripts.js"></script>
+
+</body>
+</html>
