--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div></div>
+    <div class="image-container">
+        <img class="profile-image" src="./images/profile.jpg" alt="Foto de Joe Black">
+    </div>
 
     <div class="grid-container">
 
