se agrego boton hobbie

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 Diseñador grafico | abril 2017 - marzo 2018</p>
             <p>Pixels <br>
                 Diseñador grafico | diciembre 2015 - abril 2017</p>
+            <p>Macro <br>
+                Diseñador grafico | abril 2015 - diciembre 2015</p>
         </div>
 
         <div class="grid-item">
@@ -64,6 +66,21 @@
                 </div>
                 <div class="tool-item">
                     <p>Xd</p>
+                </div>
+            </div>
+            <button id="btn-conocer-mas"> Conocer más sobre Joe </button>
+            <div id="hobbies-container" class="hobbies-container">
+                <div class="hobbie-item">
+                  <p>Natación</p>
+                </div>
+                <div class="hobbie-item">
+                    <p>Trekking</p>
+                </div>
+                <div class="hobbie-item">
+                    <p>Kung Fu</p>
+                </div>
+                <div class="hobbie-item">
+                    <p>Tiro con arco</p>
                 </div>
             </div>
         </div>
