--- a/index.html
+++ b/index.html
@@ -70,18 +70,14 @@
             </div>
             <button id="btn-conocer-mas"> Conocer más sobre Joe </button>
             <div id="hobbies-container" class="hobbies-container">
-                <div class="hobbie-item">
-                  <p>Natación</p>
-                </div>
-                <div class="hobbie-item">
-                    <p>Trekking</p>
-                </div>
-                <div class="hobbie-item">
-                    <p>Kung Fu</p>
-                </div>
-                <div class="hobbie-item">
-                    <p>Tiro con arco</p>
-                </div>
+                <h2>Hobbies</h2>
+                <ul>
+                    <li>Natación</li>
+                    <li>Trekking</li>
+                    <li>Tiro con arco</li>
+                    <li>Kung Fu</li>
+                    <li>Pesca</li>
+                </ul>
             </div>
         </div>
 
