--- a/index.html
+++ b/index.html
@@ -20,41 +20,46 @@
 
         <div class="grid-item">
             <h2> Joe Black </h2>
-
-            <p>Estado civil: Soltero</p>
-            <p>Nacionalidad: Argentino</p>
-            <p>Edad: 36 años</p>
-            <p>Fecha de nacimiento: 12 de febrero de 1986</p>
-            <p>Telefono: (761) 923-3172</p>
-            <p>Direccion: 660 Fincher Rd</p>
-            <p>Email: joe.black@example.com</p>
-
+            <ul>
+                <li>Estado civil: Soltero</li>
+                <li>Nacionalidad: Argentino</li>
+                <li>Edad: 36 años</li>
+                <li>Fecha de nacimiento: 12 de febrero de 1986</li>
+                <li>Telefono: (761) 923-3172</li>
+                <li>Direccion: 660 Fincher Rd</li>
+                <li>Email: joe.black@example.com</li>
+            </ul>
+            
             <h2>Experiencia</h2>
-            <p>Grupo<br>
-                Diseñador grafico | octubre 2018 - actualidad</p>
-            <p>Kuwi<br>
-                Diseñador grafico | marzo 2018 - octubre 2018</p>
-            <p>Cordoba shop <br>
-                Diseñador grafico | abril 2017 - marzo 2018</p>
-            <p>Pixels <br>
-                Diseñador grafico | diciembre 2015 - abril 2017</p>
-            <p>Macro <br>
-                Diseñador grafico | abril 2015 - diciembre 2015</p>
+            <ul>
+            <li>Grupo<br>
+                Diseñador gráfico | octubre 2018 - actualidad</li>
+            <li>Kuwi<br>
+                Diseñador gráfico | marzo 2018 - octubre 2018</li>
+            <li>Cordoba shop <br>
+                Diseñador gráfico | abril 2017 - marzo 2018</li>
+            <li>Pixels <br>
+                Diseñador gráfico | diciembre 2015 - abril 2017</li>
+            <li>Macro <br>
+                Diseñador gráfico | abril 2015 - diciembre 2015</li>
+            </ul>
         </div>
 
         <div class="grid-item">
-            <h2> Educacion </h2>
-            <p>Nivel Terciario: <br>
-            Técnico Superior en Diseño y Comunicación Visual <br> </p>
-            <p>Nivel Terciario: <br>
-            Técnico Superior Universitario en Comercialización <br> </p>
-            <p>Curso de Diseño Web</p>
-            <p>Curso en WordPress y WooCommerce</p>
-            <p>Marketing digital</p>
-            <p>Curso en Diseño Editorial</p>
-            <p>Capacitación en Presupuestos</p>
-            <p>Curso en Diseño 3D</p>
-            <p>Capacitación en Community Manager</p> 
+            <h2> Educación </h2>
+            <ul>
+            <li>Nivel Terciario: <br>
+            Técnico Superior en Diseño y Comunicación Visual <br> </li>
+            <li>Nivel Terciario: <br>
+            Técnico Superior Universitario en Comercialización <br> </li>
+            <li>Curso de Diseño Web</li>
+            <li>Curso en WordPress y WooCommerce</li>
+            <li>Marketing digital</li>
+            <li>Curso en Diseño Editorial</li>
+            <li>Capacitación en Presupuestos</li>
+            <li>Curso en Diseño 3D</li>
+            <li>Capacitación en Community Manager</li> 
+            </ul>
             
             <h2>Herramientas / Software</h2>
             <div class="tools-container">
@@ -66,6 +71,12 @@
                 </div>
                 <div class="tool-item">
                     <p>Xd</p>
+                </div>
+                <div class="tool-item">
+                    <p>Ae</p>
+                </div>
+                <div class="tool-item">
+                    <p>C4D</p>
                 </div>
             </div>
             <button id="btn-conocer-mas"> Conocer más sobre Joe </button>
